Bug 131966 - chart legend attributes width and height are exported to ODF 1.2 (strict)
Summary: chart legend attributes width and height are exported to ODF 1.2 (strict)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-07 17:16 UTC by Regina Henschel
Modified: 2020-04-10 16:48 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
document to test saving to ODF 1.2 (13.79 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-04-07 17:16 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-04-07 17:16:34 UTC
Created attachment 159397 [details]
document to test saving to ODF 1.2

Open attached document. It has a legend with custom width and height.
Save is to ODF 1.2, strict, not extended.
Unzip the file. Find the node chart:legend in content.xml in 'Object 1'.
Error: It has attributes width and height without namespace. The attributes should not be there at all, because they do not exist in ODF 1.2.

I see the error in Version: 7.0.0.0.alpha0+ (x64)
Build ID: 6388c578c672690fff662cb04b6a0436cd742f37
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded

AOO writes it correctly.
Comment 1 NISZ LibreOffice Team 2020-04-08 13:50:21 UTC
Reproduced with: 

Version 3.6.0.4 (Build ID: 932b512)

But not with:

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 2 Julien Nabet 2020-04-08 22:08:56 UTC
Patch on gerrit:
https://gerrit.libreoffice.org/c/core/+/91942
Comment 3 Commit Notification 2020-04-09 09:07:13 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31de39108ce19c002ab4ef6ab369dd5bfa668634

tdf#131966: chart legend attribs width and height unknown for ODF 1.2 (strict)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-04-10 16:24:31 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/07da4d775c7fa4a2d3bef5f71995317c9feb91f6

tdf#131966: chart legend attribs width and height unknown for ODF 1.2 (strict)

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.