tdf#131966: chart legend attribs width and height unknown for ODF 1.2 (strict)

Change-Id: Ie4cb7d2c9e5fb7bca88287fcaff03d5c9ca04b8b